Case-2/K8S/Kafka/kafkadocker-app-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kafkadocker-app-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kafkadocker-app-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kafkadocker-app-tier: "true"
